test/expected/explain_fsti_v.out
explain void f(static int x)
               ^
16: error: function parameters can not be "static"
